# sandbox

./: .gitignore  README.md  amplify.yml  package-lock.json  package.json
amplify/.config/: project-config.json
amplify/backend/: backend-config.json
amplify/backend/api/OpsManagerApi/: OpsManagerApi-cloudformation-template.json  api-params.json
amplify/backend/auth/opsmanager/: opsmanager-cloudformation-template.yml  parameters.json
amplify/backend/auth/opsmanager2956ee3a/: opsmanager2956ee3a-cloudformation-template.yml  parameters.json
amplify/backend/function/OpsManagerEventProcessor/: OpsManagerEventProcessor-cloudformation-template.json  Pipfile  README.md  function-parameters.json
amplify/backend/function/OpsManagerEventProcessor/events/: new_permissions_event.json  pr_sync.json
amplify/backend/function/OpsManagerEventProcessor/src/: index.py
frontend/: package-lock.json
pages/: index.js
web/: README.md
web/dashboard/: Cargo.toml  LICENSE_MIT
web/dashboard/src/: lib.rs
web/rust/: Cargo.toml
web/rust/dashboard-rs/: Cargo.toml  Dockerfile  index.html
web/rust/dashboard-rs/src/: lib.rs  main.rs
web/rust/myalerts/: Cargo.toml  NOTES.md
web/rust/myalerts/src/: lib.rs
