[package]
name = "dashboard-rs"
version = "0.1.0"
authors = ["Rafael Juliano <rjjulian@amazon.com>"]
edition = "2018"

[dependencies]
console_error_panic_hook = "0.1.6"
web-sys = { version = "0.3.49", features = ["Window", "Document", "HtmlElement", "Node", "Text"] }
wasm-bindgen = "=0.2.74" # This is pinned primarily for CI stability.
wee_alloc = "0.4.5"
myalerts = { path = "../myalerts" }